--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "react-icons": "^4.12.0",
     "react-paginate": "^8.2.0",
     "sass": "^1.69.6",
+    "sweetalert2": "^11.10.2",
     "zod": "^3.22.4"
   },
   "devDependencies": {
