--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@hookform/resolvers": "^3.3.3",
     "axios": "^1.6.3",
     "dotenv": "^16.3.1",
+    "eslint-config-prettier": "^9.1.0",
     "history": "^5.3.0",
     "next": "14.0.4",
     "react": "^18",
@@ -25,6 +26,9 @@
   },
   "devDependencies": {
     "eslint": "^8",
-    "eslint-config-next": "14.0.4"
+    "eslint-config-next": "14.0.4",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-react": "^7.33.2",
+    "prettier": "^3.1.1"
   }
 }
