--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.3.1",
     "eslint-config-prettier": "^9.1.0",
     "history": "^5.3.0",
+    "moment": "^2.30.1",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
